--- a/BeautyLife/RechargeView.xib
+++ b/BeautyLife/RechargeView.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6154.17" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6153.11"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RechargeView">
@@ -18,40 +19,49 @@
                     <rect key="frame" x="2" y="20" width="316" height="323"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZT-5T-0QA">
-                    <rect key="frame" x="28" y="80" width="51" height="71"/>
+                    <rect key="frame" x="31" y="80" width="51" height="71"/>
                     <state key="normal" image="online_huoche.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="huocheAction:" destination="-1" eventType="touchUpInside" id="i2l-uZ-KuC"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UfE-kK-1fe">
                     <rect key="frame" x="135" y="80" width="51" height="71"/>
                     <state key="normal" image="online_jipiao.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hwV-Ev-YWn">
-                    <rect key="frame" x="239" y="80" width="51" height="71"/>
-                    <state key="normal" image="online_dianfei.png">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
+                    <connections>
+                        <action selector="jipiaoAction:" destination="-1" eventType="touchUpInside" id="nIO-MG-9aG"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PPZ-tb-Aag">
-                    <rect key="frame" x="28" y="172" width="51" height="71"/>
+                    <rect key="frame" x="239" y="80" width="51" height="71"/>
                     <state key="normal" image="online_yidong.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="yidongAction:" destination="-1" eventType="touchUpInside" id="Wu2-CK-o5s"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="47m-Z3-hN5">
-                    <rect key="frame" x="135" y="172" width="51" height="71"/>
+                    <rect key="frame" x="31" y="172" width="51" height="71"/>
                     <state key="normal" image="online_dianxing.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="dianxinAction:" destination="-1" eventType="touchUpInside" id="pDa-2S-vLv"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vua-qw-zBD">
-                    <rect key="frame" x="239" y="172" width="51" height="71"/>
+                    <rect key="frame" x="135" y="172" width="51" height="71"/>
                     <state key="normal" image="online_liantong.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="liantongAction:" destination="-1" eventType="touchUpInside" id="bYS-AO-tJ9"/>
+                    </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="online_title.png" translatesAutoresizingMaskIntoConstraints="NO" id="9E8-BG-XsX">
                     <rect key="frame" x="15" y="28" width="97" height="31"/>
@@ -62,7 +72,6 @@
         </view>
     </objects>
     <resources>
-        <image name="online_dianfei.png" width="51" height="70"/>
         <image name="online_dianxing.png" width="51" height="70"/>
         <image name="online_huoche.png" width="51" height="70"/>
         <image name="online_jipiao.png" width="51" height="70"/>
